--- a/public/index.html
+++ b/public/index.html
@@ -4,16 +4,20 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+     <!-- 手机浏览器顶部地址栏颜色设置，兼容性不太好 -->
     <meta name="theme-color" content="#000000" />
+    <!-- 简介 -->
     <meta
-      name="description"
+      name="react"
       content="Web site created using create-react-app"
     />
+    <!-- 用于指定网页添加到手机主屏的logo，兼容性不太好 -->
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
+    <!-- 应用加壳，就是web页面加壳成Android或者iOS的app, manifest是应用加壳的配置文件 -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
